# my-im-app

./: .gitignore  README.md  学习计划.md  环境配置.md
cli_test/: CMakeLists.txt
client/: index.html  package.json
client/electron/: main.js
docs/: README.md  api.md  environment_setup.md
server/: CMakeLists.txt  config.json  init.sql
server/src/: main.cc
server/src/controllers/: AuthController.cc  ChatController.cc  FileController.cc
server/src/models/: Message.h  User.h
server/src/services/: MessageService.cc  MessageService.h  UserService.cc  UserService.h
server/src/utils/: JwtUtil.h  TimeUtil.h
